--- a/src/components/Cards/Card.module.css
+++ b/src/components/Cards/Card.module.css
@@ -1,9 +1,17 @@
-body {
-    background: rgb(250, 250, 250);
+.container {
+margin:50px 0 ;
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.card {
+    margin: 0 2% !important;
+}
+
+.infected {
+    border-bottom: 10px solid rgba(41, 41, 231, 0.856);
+}
+.recovered {
+    border-bottom: 10px solid rgba(16, 216, 16, 0.685);
+} 
+.deaths {
+    border-bottom: 10px solid rgba(209, 22, 22, 0.698);
 }
