added font family

--- a/src/components/CountryPicker/country.module.css
+++ b/src/components/CountryPicker/country.module.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+}
 .formControl {
     width: 30%;
     margin-bottom: 30px !important;
