--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 body {
     background: rgb(250, 250, 250);
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .container {
